--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -1,11 +1,18 @@
----#Playbook to install apache server on dev using linux
- - hosts: dev
-   become: True
-   tasks:
-        - name: Install apche on dev
-          action: yum name=httpd state=present
-        - name: Copy index.html to dev server
-          action: copy src='index.html' dest='/var/www/html/'
-        - name: Start httpd
-          action: service name=httpd state=started
-           
+---
+- hosts: webservers 
+  become: True
+  tasks:
+    - name: Install packages
+      yum:
+        name: "httpd"
+        state: "present"
+    - name: Start Apache server
+      service:
+        name: httpd
+        state: started
+        enabled: True
+    - name: Deploy static website
+      copy:
+        src: index.html
+        dest: /var/www/html/
+...
